// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputIconToggle when initiated with the content prop renders as expected 1`] = `
<label
  htmlFor="123"
  key="label-icon"
>
  <span>
    mock content
  </span>
</label>
`;

exports[`InputIconToggle when initiated without the content prop renders as expected 1`] = `
<label
  htmlFor="123"
  key="label-icon"
>
  <Icon
    bgSize="small"
    className="input-icon-toggle"
    type="foo"
  />
</label>
`;
